# data-bridge-pipeline

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  cli.md  configuration.md  datasets.rithmic_raw.md  manifest.schema.json  reconcile.md  security.md
profiles/: dev.yaml  prod.yaml  vps_rithmic.yaml
scripts/: mac_pull.sh  vps_capture_push.sh  vps_reconcile_report.sh  vps_rithmic_run.sh  vps_run.sh
src/data_bridge_pipeline/: __init__.py  cli.py  models.py  pipeline.py  queue.py  rclone.py  reconcile.py  sharding.py
src/data_bridge_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_manifest_idempotency.py  test_queue_behavior.py  test_reconcile_correctness.py  test_resume_semantics.py  test_shard_assignment.py
